1.21.1-0.6.1 Update - Fixed "Clutter Book is not seen as a Book" - Fixed "Mobs not Spawning Properly" - 1.21 Recipe Changes